Page load polishing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="icon" href="data:,">
         <title>Wordle Helper</title>
         <style>
             * {
@@ -56,8 +57,8 @@
                 }
             }
         </style>
-        <script type="text/javascript" src="enList.js"></script>
-        <script type="text/javascript" src="deList.js"></script>
+        <script async type="text/javascript" src="enList.js"></script>
+        <script async type="text/javascript" src="deList.js"></script>
         <script>
             let words;
             let simpleWords;
