--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                 for (let i = 0; i < words.length; i++) addResult(i);
 
-                const oneIn = outputs > 0 ? " | 1 in " + (Math.round(10 * words.length / outputs) / 10).toLocaleString() : "";
+                const oneIn = outputs > 0 ? " | 1 in " + round(10 * words.length / outputs, 10).toLocaleString() : "";
                 countDiv.innerHTML = outputs.toLocaleString() + " / " + words.length.toLocaleString() + oneIn;
             }
 
@@ -244,7 +244,7 @@
 
                 solveWorker.onmessage = event => {
                     if (typeof(event.data) === "number") {
-                        bestGuessDiv.innerHTML = "Solve progress: " + event.data + " / " + guessableIndices.length + " (" + Math.round(100 * event.data / guessableIndices.length) + "%)";
+                        bestGuessDiv.innerHTML = "Solve progress: " + event.data + " / " + guessableIndices.length + " (" + round(100 * event.data / guessableIndices.length, 10) + "%)";
                         return;
                     }
 
@@ -270,6 +270,10 @@
                 if (display) return words[index];
                 if (!latinChars) return words[index].toLowerCase();
                 return simpleWords[index];
+            }
+
+            function round(x, n = 1000) {
+                return Math.round(x * n) / n;
             }
         </script>
     </head>
